# AutoResearchCodebaseWithHarness

./: .gitignore  AGENTS.md  Cargo.toml  GETTING_STARTED.md  IMPROVEMENTS.md  INTRODUCTION.md  LICENSE  README.md  README_CN.md  入门指南.md
docs/: AutoResearchCodebaseWithHarness-爆款介绍.pptx  PRESENTATION.md  RECORDING_DEMO.md  RESEARCH_GUIDE.md  generate-presentation.js
examples/: nanochat_optimization.rs  video_optimization.rs
experiments/: README.md
skills/: README.md
skills/llama-cpp-optimization/: README.md
skills/nanochat-optimization/: README.md
skills/nanogpt-optimization/: README.md
skills/video-optimization/: README.md  skill.toml
skills/whisper-cpp-optimization/: README.md
src/: lib.rs
src/codebase/: mod.rs
src/harness/: cache.rs  isolation.rs  mod.rs
src/integration/: codex.rs  git.rs  mcp.rs  mod.rs
src/research/: mod.rs
src/tasks/: mod.rs  registry.rs
