[package]
name = "autocodeharness"
version = "0.1.0"
edition = "2021"
authors = ["AutoCodeHarness Team"]
description = "Universal Rust-based autonomous research framework combining automated research workflows with codebase intelligence"
license = "MIT"
repository = "https://github.com/your-org/autocodeharness"
keywords = ["research", "ml", "automation", "harness", "agent"]
categories = ["science", "development-tools"]

[dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Git operations
git2 = "0.19"

# AST parsing for codebase analysis
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

# Metrics and monitoring
sysinfo = "0.32"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[lib]
name = "autocodeharness"
path = "src/lib.rs"
